# repo-native-alignment

./: .coderabbit.yaml  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.claude-plugin/: marketplace.json
.claude/agents/: dev-pipeline-oversight.md  dev-pipeline.md  oh-aim.md  oh-execute.md  oh-problem-space.md  oh-problem-statement.md  oh-ship.md  oh-solution-space.md  release.md  ship.md  worktree-setup.md
.claude/skills/: friction.md  gen-extractor.md  release.md
.claude/skills/arch-diagram/: SKILL.md
.github/fixtures/smoke/: README.md  lib.rs
.github/scripts/: mcp-smoke.mjs
.github/workflows/: pr-checklist.yml  release.yml  rust-main-merge.yml
.oh/: config.toml  constants-cross-language.md  initial-dx.md  install-init.md  p2-review-findings.md  p3-skills-bundle.md  p4-solution-space.md  p5-implementation-plan.md  p6-aim-revisit.md  perf-pipeline-progressive.md  repo-native-alignment.md  solution-space-extractors.md  solution-space-graph.md  solution-space-multi-root.md  solution-space-scanner.md  solution-space-worktree-awareness.md
.oh/friction-logs/: 143-test-coverage.md  147-unified-search.md
.oh/guardrails/: agents-need-write-for-sessions.md  computed-but-not-delivered.md  dogfood-rna-tools.md  extract-fully-at-parse-time.md  extractors-are-pluggable.md  git-is-optimization-not-requirement.md  lightweight.md  llm-surfaces-human-judges.md  metis-curation-requires-human-judgment.md  metis-is-contextual-not-universal.md  name-tools-honestly.md  no-language-conditionals-in-generic.md  no-linear-scan-on-graph.md  no-parallel-cargo-agents.md  repo-native.md  ship-steps-visible-on-pr.md  subagent-prompts-require-rna-directive.md  test-with-real-mcp-client.md  validate-before-building.md
.oh/metis/: adversarial-testing-with-salvage.md  alignment-is-the-constraint.md  ast-extract-fully-at-parse-time.md  broad-file-patterns-noisy.md  commit-tagging-convention.md  computed-but-not-delivered.md  coreml-apple-silicon-embedding.md  deterministic-bootstrap-over-packaging.md  embed-pipeline-bottlenecks.md  fspulse-salvage.md  glossary-is-dx.md  hardlinked-cargo-locks-block-builds.md  investigate-before-fixing-stale-edges-non-issue.md  llm-synthesis-is-not-judgment.md  lsp-edge-resolution-debugging.md  lsp-outgoing-calls-fqn-already-in-response.md  main-merge-ci-shipping-friction.md  mcp-tool-exercise-findings.md  metis-is-not-universal.md  oh-init-should-be-grounded.md  perf-pipeline-session-results.md  rna-directive-quantifiably-changes-agent-behavior.md  rna-live-verify-protoc-preflight.md  scip-spike-lsp-superior.md  session-1-salvage.md  setup-two-tier-verification.md  ship-steps-must-be-visible.md  skills-integration-pivot.md  subagents-default-to-grep-not-rna.md  suffix-match-import-resolution.md  targeted-reindex-better-than-full-reindex.md  three-repo-validation.md  tool-consolidation-shipped.md  v0.1.7-exercise-findings.md  validate-before-building.md  workspace-context-engine-session.md  worktree-awareness-wiring-not-design.md
.oh/outcomes/: agent-alignment.md  codebase-to-warehouse-pipeline.md  context-assembly.md  domain-context-compiler.md  human-led-curation.md  subsystem-detection.md
.oh/sessions/: 143-dev.md  145-dev.md  147-dev.md  155-dev.md  156-dev.md  157-dev.md  159-dev.md  160-dev.md  162-dev.md  164-dev.md  165-dev.md  168-dev.md  190-dev.md  194-195-dev.md  194-solution-space.md  198-dev.md  241-dev.md  316-dev.md  344-dev.md  474-dev.md  512-dev.md  526-dev.md  553-dev.md  capability-expansion-research.md  cgr-salvage.md  claude-memory-108.md  codegraphcontext-salvage.md  codetree-salvage.md  event-bus-architecture.md  event-bus-execution-plan.md  graph-quality-107.md  oh-evals-plan.md  opendev-paper-salvage.md  release-v0.1.15.md  relevance-scoring-problem-space.md  rider-mcp-salvage.md  serena-salvage.md
.oh/signals/: agent-scoping-accuracy.md  tools-exercised-per-session.md
.omp/agents/: oh-execute.md  oh-ship.md  oh-solution-space.md
benchmark/: aggregate-scores.py  design.md  eval-rubric-v3.md  eval-rubric.md  parse-results.py  prompt-v2-rna.md  prompt-v2.md  prompt-v3-rna.md  prompt-v3.md  prompt.md  run-benchmark.sh  run-v3.sh  score-results.sh
benchmark/results/rna/: run-01.json  v3-mcp.json  v3-run-01.jsonl  v3-run-02.json  (+3 more)
benchmark/results/rna-mcp/: v3-run-01.json  v3-run-02.json  v3-run-03.json  v3-run-04.json  v3-run-05.json
docs/: benchmark-v2-design.md  compared-to.md  data-model.md  extractors.md  graph.md  lsp-enrichment.md  paper-graph-augmented-context.md  rna-smoke-test-design.md  rna-source-compatibility.md  scanner.md
docs/ADRs/: 001-event-bus-extraction-pipeline.md  002-arcswap-graph-concurrency.md  README.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: setup.md
scripts/: prep-worktree.sh  test-suite.sh
src/: embed.rs  lib.rs  main.rs  open_viewer.rs  process.rs  query.rs  ranking.rs  rerank.rs  roots.rs  scanner.rs  server.rs  service.rs  setup.rs  smoke.rs  smoke_test.rs  types.rs  viewer.html  walk.rs
src/bootstrap/: mod.rs
src/bus/: mod.rs
src/code/: minify.rs  mod.rs
src/consumers/: mod.rs
src/extract/: api_link.rs  aspnet_endpoints.rs  bash.rs  c.rs  cache.rs  configs.rs  consumers.rs  cpp.rs  csharp.rs  dart.rs  directory_module.rs  dockerfile.rs  elixir.rs  event_bus.rs  extractor_config.rs  fastapi_router_prefix.rs  framework_detection.rs  framework_rules.toml  generic.rs  go.rs  graphql.rs  grpc.rs  hcl.rs  html.rs  import_calls.rs  java.rs  javascript.rs  json_extractor.rs  kotlin.rs  lsp.rs  lua.rs  manifest.rs  markdown.rs  mod.rs  naming_convention.rs  nextjs_routing.rs  openapi.rs  openapi_sdk_link.rs  php.rs  post_extraction.rs  (+19 more)
src/git/: blame.rs  mod.rs  pr_merges.rs
src/graph/: index.rs  mod.rs  store.rs
src/markdown/: mod.rs
src/oh/: mod.rs
src/server/: bg_scanner.rs  enrichment.rs  graph.rs  handlers.rs  helpers.rs  mod.rs  sentinel.rs  staleness.rs  state.rs  store.rs  tools.rs
src/service/: graph.rs  mod.rs  progress.rs  repomap.rs  roots.rs  search.rs
(+55 files in other folders)
