[package]
name = "repo-native-alignment"
version = "0.1.0"
edition = "2024"
description = "Agentic harness: business outcomes, SLO signals, constraints, and learnings as queryable repo artifacts"

[dependencies]
# MCP server (same SDK as UHC — proven pattern)
rust-mcp-sdk = { version = "0.8", default-features = false, features = ["server", "macros", "hyper-server", "sse", "stdio"] }
async-trait = "0.1"

tokio = { version = "1", features = ["full"] }

# Markdown parsing (heading-aware chunking for embeddings)
pulldown-cmark = "0.12"

# Git integration (change detection, history)
git2 = "0.20"

# Code parsing (symbol extraction)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# In-memory graph index (traversal, path queries, impact analysis)
petgraph = "0.7"

# Deterministic UUIDs for source envelope event IDs
uuid = { version = "1", features = ["v4"] }

# Vector + columnar store
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# Local embeddings (no API key, ONNX-based)
fastembed = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization (YAML frontmatter + JSON for MCP responses)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async streams (for LanceDB query results)
futures = "0.3"

# Error handling
anyhow = "1"

# Logging (stderr only — stdout reserved for MCP stdio transport)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.26.0"
