[package]
name = "repo-native-alignment"
version = "0.1.0"
edition = "2024"
description = "Agentic harness: business outcomes, SLO signals, constraints, and learnings as queryable repo artifacts"
license = "MIT"

[dependencies]
# MCP server (same SDK as UHC — proven pattern)
rust-mcp-sdk = { version = "0.8", default-features = false, features = ["server", "macros", "hyper-server", "sse", "stdio"] }
async-trait = "0.1"

tokio = { version = "1", features = ["full"] }

# Markdown parsing (heading-aware chunking for embeddings)
pulldown-cmark = "0.13"

# Git integration (change detection, history)
git2 = "0.20"

# Code parsing (symbol extraction)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-zig = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-swift = "0.7"
tree-sitter-hcl = "1.1"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"

# In-memory graph index (traversal, path queries, impact analysis)
petgraph = "0.8"

# Deterministic UUIDs for source envelope event IDs
uuid = { version = "1", features = ["v4"] }

# Vector + columnar store
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# Local embeddings — Metal GPU on Apple Silicon, CPU fallback
metal-candle = { git = "https://github.com/open-horizon-labs/metal-candle", default-features = false, features = ["embeddings"] }
candle-core = { version = "0.9" }

# CLI
clap = { version = "4", features = ["derive"] }

# SQL parsing (schema extraction from migrations)
sqlparser = "0.61"

# Serialization (YAML frontmatter + JSON for MCP responses)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async streams (for LanceDB query results)
futures = "0.3"

# LSP protocol types (for Phase 2 enrichment via language servers)
lsp-types = "0.97"

# Error handling
anyhow = "1"

# Logging (stderr only — stdout reserved for MCP stdio transport)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-core/accelerate", "metal-candle/custom-metal"]

[dev-dependencies]
tempfile = "3.26.0"
