[package]
name = "repo-native-alignment"
version = "0.1.15"
edition = "2024"
description = "Agentic harness: business outcomes, SLO signals, constraints, and learnings as queryable repo artifacts"
license = "MIT"

[dependencies]
# MCP server (same SDK as UHC — proven pattern)
rust-mcp-sdk = { version = "0.8", default-features = false, features = ["server", "macros", "hyper-server", "sse", "stdio"] }
async-trait = "0.1"

tokio = { version = "1", features = ["full"] }

# Markdown parsing (heading-aware chunking for embeddings)
pulldown-cmark = "0.13"

# Git integration (change detection, history)
git2 = "0.20"

# Code parsing (symbol extraction)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
# New grammar crates (issue #435)
tree-sitter-c = "0.24"
tree-sitter-php = "0.24"
tree-sitter-html = "0.23"
tree-sitter-scala = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-dart = "0.1"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-zig = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-swift = "0.7"
tree-sitter-hcl = "1.1"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-dockerfile = { package = "tree-sitter-dockerfile-updated", version = "0.2" }
tree-sitter-graphql = "0.1"

# In-memory graph index (traversal, path queries, impact analysis)
petgraph = "0.8"

# Lock-free atomic pointer swap (double-buffered embed index)
arc-swap = "1"

# Deterministic UUIDs for source envelope event IDs
uuid = { version = "1", features = ["v4"] }

# Vector + columnar store
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# Local embeddings — Metal GPU on Apple Silicon, CPU fallback
metal-candle = { git = "https://github.com/open-horizon-labs/metal-candle", default-features = false, features = ["embeddings"] }
candle-core = { version = "0.9" }

# Cross-encoder reranking (ONNX runtime, CPU inference)
fastembed = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# SQL parsing (schema extraction from migrations)
sqlparser = "0.61"

# Serialization (YAML frontmatter + JSON for MCP responses)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# FTS types for hybrid search (FullTextSearchQuery)
lance-index = "2.0"

# Async streams (for LanceDB query results)
futures = "0.3"

# LSP protocol types (for Phase 2 enrichment via language servers)
lsp-types = "0.97"

# URI parsing (percent-decoding for LSP file:// URIs)
url = "2"

# Content hashing (incremental extraction/embedding skip)
blake3 = "1"

# Parallel file extraction
rayon = "1"

# Error handling
anyhow = "1"

# Logging (stderr only — stdout reserved for MCP stdio transport)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gray_matter = "0.3.2"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-core/accelerate", "metal-candle/custom-metal"]

# Dev: fastest possible compile, no optimization on own code
[profile.dev]
opt-level = 0
# Note: split-debuginfo = "unpacked" conflicts with sccache (can't zip unpacked files)
# Default debuginfo is fine — sccache is the bigger win

# But optimize dependencies — they cache well and run faster
# (tree-sitter grammars, LanceDB, candle are painful at opt-level 0)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3.26.0"
